--- a/src/assets/css/megaMenuMobile.css
+++ b/src/assets/css/megaMenuMobile.css
@@ -73,3 +73,7 @@
 .accordionItemMobile:hover{
     text-decoration: none;
 }
+.panelMobile ul li{
+    text-decoration: none;
+    list-style: none;
+}
